# tugasiot-esp32s3-rust

./: Cargo.toml  README.md  partitions_ota.csv  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
