[package]
name = "projectiot"
version = "0.1.0"
authors = ["hanif"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "projectiot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-sys = "0.36"
esp-idf-hal = "0.45"
anyhow = "1.0"
embedded-dht-rs = "0.2"
heapless = "0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.10.9"

[build-dependencies]
embuild = "0.33"
